# gerador-legendas

./: .gitignore  README.md  app.py  pyproject.toml
